--- a/templates/machiavelli/_player_row.html
+++ b/templates/machiavelli/_player_row.html
@@ -29,9 +29,9 @@
 
 	<td><!-- actions -->
 	{% if player %}
-	{% ifnotequal game.phase 0 %}
-	{% ifnotequal p player %}
-	{% ifnotequal p.eliminated 1 %}
+	{% if game.phase != 0 %}
+	{% if p != player %}
+	{% if p.eliminated != 1 %}
 		<div>
 		{% if game.configuration.letters %}
 			<a href="{% url "condottieri_messages_compose" sender_id=player.id recipient_id=p.id %}"><img src="{{ STATIC_URL }}machiavelli/img/envelope.png" title="{% trans "Send message" %}" /></a>
@@ -40,19 +40,19 @@
 			<a href="{% url "lend" game.slug p.id %}"><img src="{{ STATIC_URL }}machiavelli/img/coin.png" title="{% trans "Give money" %}" /></a>
 		{% endif %}
 		{% if can_excommunicate %}
-			{% ifnotequal p.is_excommunicated 1 %}
+			{% if p.is_excommunicated != 1 %}
 			<a href="{% url "excommunicate" game.slug p.id %}"><img src="{{ STATIC_URL }}machiavelli/img/excommunication-icon-16.png" title="{% trans "Excommunicate" %}" /></a>
-			{% endifnotequal %}
+			{% endif %}
 		{% endif %}
 		{% if can_forgive %}
-			{% ifequal p.is_excommunicated 1 %}
+			{% if p.is_excommunicated == 1 %}
 			<a href="{% url "forgive-excommunication" game.slug p.id %}"><img src="{{ STATIC_URL }}machiavelli/img/forgive-icon-16.png" title="{% trans "Forgive" %}" /></a>
-			{% endifequal %}
+			{% endif %}
 		{% endif %}
 		</div>
-	{% endifnotequal %}
-	{% endifnotequal %}
-	{% endifnotequal %}
+	{% endif %}
+	{% endif %}
+	{% endif %}
 	{% endif %}
 	</td><!-- actions -->
 </tr>
