--- a/templates/machiavelli/summary.html
+++ b/templates/machiavelli/summary.html
@@ -107,7 +107,7 @@
 {% else %}
 	<p>{% blocktrans %}At this time there are no games waiting for players. Of course you can create a new one.{% endblocktrans %}</p>
 {% endif %}
-<p><a href="{% url "new-game" %}">{% trans "New game" %}</a></p>
+<p><a href="{% url 'new_game' %}">{% trans "New game" %}</a></p>
 
 </div>
 
