--- a/templates/machiavelli/help/contribute.html
+++ b/templates/machiavelli/help/contribute.html
@@ -1,4 +1,4 @@
-{% extends "condottieri_help/base.html" %}
+{% extends "machiavelli/base.html" %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Contribute" %}{% endblock %}
@@ -6,7 +6,7 @@
 {% block body_class %}contribute{% endblock %}
 {% block rtab_id %}id="tab_contribute"{% endblock %}
 
-{% block content %}
+{% block main_content %}
 <h1>{% trans "Contributing to Condottieri" %}</h1>
 <p>{% blocktrans %}Condottieri is a free (as in Freedom) and open source project that is being developed as a hobby. No profit is got from this work, except the pleasure of playing the awesome game that is Machiavelli, with an active community of players.{% endblocktrans %}</p>
 
