--- a/templates/machiavelli/help/index.html
+++ b/templates/machiavelli/help/index.html
@@ -1,7 +1,7 @@
-{% extends "condottieri_help/base.html" %}
+{% extends "machiavelli/base.html" %}
 {% load i18n %}
 
-{% block content %}
+{% block main_content %}
 <h1>{% trans "Help" %}</h1>
 <p>{% blocktrans %}Here you can find some help to use this game and to understand its mechanisms. If you can't find the answer to your question, maybe you can find it in the <a href="{{ forum_url }}">forum</a>. You can also use the forum to ask any questions about the game.{% endblocktrans %}</p>
 <h2>{% trans "User management" %}</h2>
