--- a/templates/machiavelli/summary.html
+++ b/templates/machiavelli/summary.html
@@ -5,6 +5,7 @@
 {% load avatar_tags %}
 {% load machiavelli_tags %}
 {% load condottieri_profiles_tags %}
+{% load static %}
 
 {% get_current_language as LANGUAGE_CODE %}
 
@@ -44,9 +45,9 @@
 	</div>
 	<p class="{{ player.get_time_status }}">{{ player.game.next_phase_change|timeuntil }}</span></p>
 <ul>
-	<li><a href="{% url "game-log" player.game.slug %}">{% trans "Log" %}</a></li> 
-	<li><a href="{% url "condottieri_messages_inbox" player.game.slug %}">{% trans "Inbox" %}</a></li>
-	<li><a href="{% url "condottieri_messages_outbox" player.game.slug %}">{% trans "Outbox" %}</a></li>
+	<li><a href="{% url 'machiavelli:game_log' player.game.slug %}">{% trans "Log" %}</a></li> 
+	<li><a href="{% url 'machiavelli:condottieri_messages_inbox' player.game.slug %}">{% trans "Inbox" %}</a></li>
+	<li><a href="{% url 'machiavelli:condottieri_messages_outbox' player.game.slug %}">{% trans "Outbox" %}</a></li>
 </ul>
 </div>
 	{% endfor %}
@@ -71,7 +72,7 @@
 <dl>
 <dt>{% trans "Average score" %}</dt><dd>{{ promoted_game.get_average_score|score_stars }}</dd>
 <dt>{% trans "Average karma" %}</dt><dd>{{ promoted_game.get_average_karma|karma_stars }}</dd>
-<dt>{% trans "Scenario" %}</dt><dd><a href="{% url "scenario_detail" promoted_game.scenario.name %}">{{ promoted_game.scenario.title }}</a></dd>
+<dt>{% trans "Scenario" %}</dt><dd><a href="{% url "scenarios:scenario_detail" promoted_game.scenario.name %}">{{ promoted_game.scenario.title }}</a></dd>
 <dt>{% trans "Cities to win" %}</dt><dd>{{ promoted_game.cities_to_win }}</dd>
 <dt>{% trans "Time limit" %}</dt><dd>{{ promoted_game.get_time_limit_display }}</dd>
 <dt>{% trans "Creator" %}</dt><dd>{{ promoted_game.created_by.username }}</dd>
@@ -82,7 +83,7 @@
 	<ul>
 	{% for p in promoted_game.player_set.all %}
 		{% if p.user %}
-		<li><a href="{% url "profile_detail" username=p.user.username %}">{{ p.user.username }}</a></li>
+		<li><a href="{% url 'profiles:profile_detail' username=p.user.username %}">{{ p.user.username }}</a></li>
 		{% endif %}
 	{% endfor %}
 	</ul>
@@ -96,18 +97,18 @@
 	<li>{% trans "Version" %}: {{ promoted_game.version }}</li>
 	<li>{{ num_comments }} {% trans "comments" %}</li>
 	<li>{% rule_icons promoted_game.configuration %}</li>
-	<li><a href="{% url "join-game" promoted_game.slug %}">{% trans "Join game" %}</a></li>
+	<li><a href="{% url 'machiavelli:join_game' promoted_game.slug %}">{% trans "Join game" %}</a></li>
 </ul>
 </div>
 {% endif %}
 
 {% if joinable_count > 0 %}
-<p>{% blocktrans %}There are {{joinable_count}} games waiting for players.{% endblocktrans %} <a href="{% url "games-joinable" %}">{% trans "Join a game." %}</a></p>
+<p>{% blocktrans %}There are {{joinable_count}} games waiting for players.{% endblocktrans %} <a href="{% url 'machiavelli:games_joinable' %}">{% trans "Join a game." %}</a></p>
 
 {% else %}
 	<p>{% blocktrans %}At this time there are no games waiting for players. Of course you can create a new one.{% endblocktrans %}</p>
 {% endif %}
-<p><a href="{% url 'new_game' %}">{% trans "New game" %}</a></p>
+<p><a href="{% url 'machiavelli:new_game' %}">{% trans "New game" %}</a></p>
 
 </div>
 
@@ -137,26 +138,12 @@
 	{% avatar c.user 24 %}
 		{% blocktrans with c.submit_date|timesince as time and c.user as user and c.game.title as slug %}{{ time }} ago by {{ user }} in the game {{ slug }}
 		{% endblocktrans %}
-		<a href="{% url "show-game" c.game.slug %}"><img src="{{ STATIC_URL }}machiavelli/img/link.png" alt="Go" /></a>
+		<a href="{% url "machiavelli:show_game" c.game.slug %}"><img src="{% static 'machiavelli/img/link.png' %}" alt="Go" /></a>
 	</div>
 	</div>
 	</div>
 {% endfor %}
 </div>
-</div>
-{% endif %}
-
-{% endcache %}
-
-{% endblock %}
-
-{% block right_column_extra %}
-
-{% if new_scenario %}
-<div id="new_scenario">
-<h2>{% blocktrans with new_scenario.title as title %}New scenario: "{{title}}"{% endblocktrans %}</h2>
-<p>{{ new_scenario.description|truncatewords:20 }}</p>
-<a href="{% url "scenario_detail" new_scenario.name %}"><img src="{{ new_scenario.thumbnail_url }}" style="border: solid 1px #000"/></a>
 </div>
 {% endif %}
 
@@ -166,7 +153,64 @@
 <ul>
 {% for w in whispers %}
 <li>{{ w.text|escape }}
-<a href="{% url "show-game" w.game.slug %}"><img src="{{ STATIC_URL }}machiavelli/img/link.png" alt="Go" /></a>
+<a href="{% url "machiavelli:show_game" w.game.slug %}"><img src="{% static 'machiavelli/img/link.png' %}" alt="Go" /></a>
+<span class="date">{{ w.created_at|timesince }}, {{ w.game.title|truncatewords:5 }}</span></li>
+{% endfor %}
+</ul>
+</div>
+{% endif %}
+
+{% if new_notices %}
+<div id="new_notices">
+<h2>{% trans "New notices" %}</h2>
+<ul>
+{% for n in new_notices %}
+<li>{{ n|safe }}</li>
+{% endfor %}
+</ul>
+</div>
+{% endif %}
+
+<div style="text-align: center">
+{% if twitter_banner %}
+<a href="{{ twitter_url }}"><img src="{{ STATIC_URL }}img/{{ twitter_banner }}" alt="{% trans "Follow Condottieri on Twitter" %}"/></a>
+<br />
+{% endif %}
+{% if gplus_banner %}
+<a href="{{ gplus_url }}"><img src="{{ STATIC_URL }}img/{{ gplus_banner }}" alt="{% trans "Follow Condottieri on Google+" %}"/></a>
+<br />
+{% endif %}
+</div>
+
+{% if user.is_authenticated %}
+
+{% if hosting_banner %}
+<div id="hosting">
+<a href="{{ hosting_url }}"><img border="0" alt="My hosting" src="{{ STATIC_URL }}/img/{{ hosting_banner }}" /></a>
+</div>
+{% endif %}
+
+{% endif %}
+{% endcache %}
+{% endblock %}
+
+{% block right_column_extra %}
+
+{% if new_scenario %}
+<div id="new_scenario">
+<h2>{% blocktrans with new_scenario.title as title %}New scenario: "{{title}}"{% endblocktrans %}</h2>
+<p>{{ new_scenario.description|truncatewords:20 }}</p>
+<a href="{% url "scenarios:scenario_detail" new_scenario.name %}"><img src="{{ new_scenario.thumbnail_url }}" style="border: solid 1px #000"/></a>
+</div>
+{% endif %}
+
+{% if whispers %}
+<div id="latest_gossip">
+<h2>{% trans "Latest gossip" %}</h2>
+<ul>
+{% for w in whispers %}
+<li>{{ w.text|escape }}
+<a href="{% url "machiavelli:show_game" w.game.slug %}"><img src="{% static 'machiavelli/img/link.png' %}" alt="Go" /></a>
 <span class="date">{{ w.created_at|timesince }}, {{ w.game.title|truncatewords:5 }}</span></li>
 {% endfor %}
 </ul>
