--- a/templates/machiavelli/_player_row.html
+++ b/templates/machiavelli/_player_row.html
@@ -1,5 +1,6 @@
 {% load i18n %}
 {% load avatar_tags %}
+{% load static %}
 
 <tr class="{{ p.static_name }}">
 	<td>
@@ -10,13 +11,13 @@
 		{% endif %}
 	{% endif %}
 	{% if p.is_excommunicated %}
-	<img src="{{ STATIC_URL }}machiavelli/img/excommunication-icon-16.png" title="{% trans "Excommunicated" %}" />
+	<img src="{% static 'machiavelli/img/excommunication-icon-16.png' %}" title="{% trans "Excommunicated" %}" />
 	{% endif %}
 	{% if p.surrendered %}
-	<img src="{{ STATIC_URL }}machiavelli/img/surrender-icon-16.png" title="{% trans "Surrendered" %}" />
+	<img src="{% static 'machiavelli/img/surrender-icon-16.png' %}" title="{% trans "Surrendered" %}" />
 	{% endif %}
 	{% if game.extended_deadline and not p.done %}
-	<img src="{{ STATIC_URL }}machiavelli/img/sleep.png" title="{% trans "Delayed" %}" />
+	<img src="{% static 'machiavelli/img/sleep.png' %}" title="{% trans "Delayed" %}" />
 	{% endif %}
 	</td>
 
@@ -34,19 +35,19 @@
 	{% if p.eliminated != 1 %}
 		<div>
 		{% if game.configuration.letters %}
-			<a href="{% url "condottieri_messages_compose" sender_id=player.id recipient_id=p.id %}"><img src="{{ STATIC_URL }}machiavelli/img/envelope.png" title="{% trans "Send message" %}" /></a>
+			<a href="{% url "condottieri_messages_compose" sender_id=player.id recipient_id=p.id %}"><img src="{% static 'machiavelli/img/envelope.png' %}" title="{% trans "Send message" %}" /></a>
 		{% endif %}
 		{% if game.configuration.finances %}
-			<a href="{% url "lend" game.slug p.id %}"><img src="{{ STATIC_URL }}machiavelli/img/coin.png" title="{% trans "Give money" %}" /></a>
+			<a href="{% url "lend" game.slug p.id %}"><img src="{% static 'machiavelli/img/coin.png' %}" title="{% trans "Give money" %}" /></a>
 		{% endif %}
 		{% if can_excommunicate %}
 			{% if p.is_excommunicated != 1 %}
-			<a href="{% url "excommunicate" game.slug p.id %}"><img src="{{ STATIC_URL }}machiavelli/img/excommunication-icon-16.png" title="{% trans "Excommunicate" %}" /></a>
+			<a href="{% url "excommunicate" game.slug p.id %}"><img src="{% static 'machiavelli/img/excommunication-icon-16.png' %}" title="{% trans "Excommunicate" %}" /></a>
 			{% endif %}
 		{% endif %}
 		{% if can_forgive %}
 			{% if p.is_excommunicated == 1 %}
-			<a href="{% url "forgive-excommunication" game.slug p.id %}"><img src="{{ STATIC_URL }}machiavelli/img/forgive-icon-16.png" title="{% trans "Forgive" %}" /></a>
+			<a href="{% url "forgive-excommunication" game.slug p.id %}"><img src="{% static 'machiavelli/img/forgive-icon-16.png' %}" title="{% trans "Forgive" %}" /></a>
 			{% endif %}
 		{% endif %}
 		</div>
