--- a/templates/machiavelli/expenses_actions.html
+++ b/templates/machiavelli/expenses_actions.html
@@ -88,7 +88,7 @@
 </ul>
 {% endif %}
 
-<p><a href="{% url "show-game" game.slug %}">{% trans "Return to game" %}</a></p>
+<p><a href="{% url 'machiavelli:show_game' game.slug %}">{% trans "Return to game" %}</a></p>
 </div>
 {% endblock %}
 
