--- a/templates/machiavelli/finance_reinforcements_1.html
+++ b/templates/machiavelli/finance_reinforcements_1.html
@@ -34,7 +34,7 @@ unit depends on its class. Regular units cost 3 ducats, and special units cost m
 
 {% endif %}
 
-<form action="{% url "show-game" game.slug %}" method="post">
+<form action="{% url 'machiavelli:show_game' game.slug %}" method="post">
 {% csrf_token %}
 
 {% if formset %}
