--- a/templates/machiavelli/show_game.html
+++ b/templates/machiavelli/show_game.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load avatar_tags %}
+{% load static %}
 
 
 {% block game_body %}
@@ -23,8 +24,8 @@
 		{% if game.visible %}
 		<th>{% trans "User" %}</th>
 		{% endif %}
-		<th><img src="{{ STATIC_URL }}machiavelli/img/city-icon-16.png" title="{% trans "Cities" %}"/></th>
-		<th><img src="{{ STATIC_URL }}machiavelli/img/unit-icon-16.png" title="{% trans "Units" %}"/></th>
+		<th><img src="{% static 'machiavelli/img/city-icon-16.png' %}" title="{% trans "Cities" %}"/></th>
+		<th><img src="{% static 'machiavelli/img/unit-icon-16.png' %}" title="{% trans "Units" %}"/></th>
 		<th>{% trans "Actions" %}</th>
 		</tr>
 	</thead>
@@ -48,7 +49,7 @@
 <h2>{% trans "Campaign log" %}</h2>
 <div class="menu">
 <p><a href="{% url "gamearea-list" game.slug %}">{% trans "Areas list" %}</a>
-| <a href="{% url "scenario_detail" game.scenario.name %}">{% trans "Scenario" %}</a>
+| <a href="{% url "scenarios:scenario_detail" game.scenario.name %}">{% trans "Scenario" %}</a>
 | <a href="{% url "game-log" game.slug %}">{% trans "All events" %}</a>
 {% if not game.configuration.fow %}
 | <a href="{% url "turn-log-list" game.slug %}">{% trans "Process" %}</a></p>
@@ -109,8 +110,8 @@
 
 {% block extra_body %}
 {% block extra_game %}{% endblock %}
-<script src="{{ STATIC_URL }}js/jquery.mousewheel.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}js/jquery.iviewer.min.js" type="text/javascript"></script>
+<script src="{% static 'js/jquery.mousewheel.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/jquery.iviewer.min.js' %}" type="text/javascript"></script>
 <script type="text/javascript">
 	$(function() {
 		makeLayout();
