--- a/templates/pinax/notifications/game_started/notice.html
+++ b/templates/pinax/notifications/game_started/notice.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load static %}
 
-{% blocktrans with game.slug as slug %}'{{ slug }}' has just started.{% endblocktrans %}
-<a href="{% url "show-game" game.slug %}"><img src="{{ STATIC_URL }}machiavelli/img/link.png" alt="Go" /></a>
+{% blocktrans with game.name as game_name %}Game {{ game_name }} has started!{% endblocktrans %}
+<a href="{% url show-game game.slug %}"><img src="{% static 'machiavelli/img/link.png' %}" alt="Go" /></a>
