--- a/templates/pinax/notifications/got_player/notice.html
+++ b/templates/pinax/notifications/got_player/notice.html
@@ -1,5 +1,6 @@
 {% load i18n %}
+{% load static %}
 
-{% blocktrans with game.slug as slug %}You are now playing in '{{ slug }}'.{% endblocktrans %}
-<a href="{% url "show-game" game.slug %}"><img src="{{ STATIC_URL }}machiavelli/img/link.png" alt="Go" /></a>
+{% blocktrans with game.name as game_name %}A new player has joined {{ game_name }}!{% endblocktrans %}
+<a href="{% url show-game game.slug %}"><img src="{% static 'machiavelli/img/link.png' %}" alt="Go" /></a>
 
