--- a/templates/pinax/notifications/overthrow_attempt/notice.html
+++ b/templates/pinax/notifications/overthrow_attempt/notice.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load static %}
 
-{% blocktrans with game.slug as slug %}Someone tries to overthrow you in '{{ slug }}'.{% endblocktrans %}
-<a href="{% url "show-game" game.slug %}"><img src="{{ STATIC_URL }}machiavelli/img/link.png" alt="Go" /></a>
+{% blocktrans with game.name as game_name %}{{ actor }} has attempted to overthrow you in {{ game_name }}!{% endblocktrans %}
+<a href="{% url show-game game.slug %}"><img src="{% static 'machiavelli/img/link.png' %}" alt="Go" /></a>
