--- a/templates/pinax/notifications/received_ducats/notice.html
+++ b/templates/pinax/notifications/received_ducats/notice.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load static %}
 
-{% blocktrans with game.slug as slug %}{{ country }} sent you {{ ducats }}d in '{{ slug }}'.{% endblocktrans %}
-<a href="{% url "show-game" game.slug %}"><img src="{{ STATIC_URL }}machiavelli/img/link.png" alt="Go" /></a>
+{% blocktrans with game.name as game_name %}You have received ducats in {{ game_name }}!{% endblocktrans %}
+<a href="{% url show-game game.slug %}"><img src="{% static 'machiavelli/img/link.png' %}" alt="Go" /></a>
